clean up main branch

--- a/Figures/prices_v2.tex
+++ b/Figures/prices_v2.tex
@@ -21,7 +21,8 @@
 \usetikzlibrary{decorations.text}
 
 %\def \scenario {perfect_foresight}
-\def \scenario {myopic}
+%\def \scenario {myopic}
+\def \scenario{futures}
 %\def \scenario {myopicfringe}
 
 \def \data {results/\scenario_1.csv}
