--- a/Figures/prices.tex
+++ b/Figures/prices.tex
@@ -30,11 +30,11 @@
 %\def \scenario {myopic}
 %\def \scenario {myopicfringe}
 
-\def \data {results/\scenario_1.csv}
-\def \datab {results/\scenario_2.csv}
-\def \datac {results/\scenario_3.csv}
-\def \datad {results/\scenario_4.csv}
-\def \datae {results/\scenario_5.csv}
+\def \data {../results/\scenario_1.csv}
+\def \datab {../results/\scenario_2.csv}
+\def \datac {../results/\scenario_3.csv}
+\def \datad {../results/\scenario_4.csv}
+\def \datae {../results/\scenario_5.csv}
 
 
 
@@ -62,35 +62,35 @@
     \addplot[line width=1.5pt, violet!50] table [x=Y, y=λ_ets, col sep=comma]{\datad};
     \addplot[line width=1.5pt, violet!60] table [x=Y, y=λ_ets, col sep=comma]{\datac};
     \addplot[line width=1.5pt, violet!80] table [x=Y, y=λ_ets, col sep=comma]{\datab};
-    \addplot[line width=1.5pt, violet] table [x=Y, y=λ_ets, col sep=comma]{\data};
+    %\addplot[line width=1.5pt, violet] table [x=Y, y=λ_ets, col sep=comma]{\data};
     \end{axis}
     \end{tikzpicture}
     %\caption{Emission Prices}
     %\label{fig:emission_prices}
 \end{subfigure}
 % Right subfigure: Product prices
-\begin{subfigure}{8cm}
-    \begin{tikzpicture}
-    \begin{axis}[
-          height=6cm,
-          width=6cm,
-          xlabel=Year,
-          ylabel=Product Price (EUR/$\si{t_{good}}$),
-          grid=both,
-          xmin=\from, xmax=\till,
-          ymin=0, ymax=1500, % Adjust based on your data range
-         /pgf/number format/1000 sep={},
-          legend pos=outer north east]
-    \addplot[line width=1.5pt, teal!40] table [x=Y, y=λ_product, col sep=comma]{\datae};
-    \addplot[line width=1.5pt, teal!50] table [x=Y, y=λ_product, col sep=comma]{\datad};
-    \addplot[line width=1.5pt, teal!60] table [x=Y, y=λ_product, col sep=comma]{\datac};
-    \addplot[line width=1.5pt, teal!80] table [x=Y, y=λ_product, col sep=comma]{\datab};
-    \addplot[line width=1.5pt, teal] table [x=Y, y=λ_product, col sep=comma]{\data};
-    \end{axis}
-    \end{tikzpicture}
+%\begin{subfigure}{8cm}
+%    \begin{tikzpicture}
+%    \begin{axis}[
+%          height=6cm,
+%          width=6cm,
+%          xlabel=Year,
+%          ylabel=Product Price (EUR/$\si{t_{good}}$),
+%          grid=both,
+%          xmin=\from, xmax=\till,
+%          ymin=0, ymax=1500, % Adjust based on your data range
+%         /pgf/number format/1000 sep={},
+%          legend pos=outer north east]
+%    \addplot[line width=1.5pt, teal!40] table [x=Y, y=λ_product, col sep=comma]{\datae};
+%    \addplot[line width=1.5pt, teal!50] table [x=Y, y=λ_product, col sep=comma]{\datad};
+%    \addplot[line width=1.5pt, teal!60] table [x=Y, y=λ_product, col sep=comma]{\datac};
+%    \addplot[line width=1.5pt, teal!80] table [x=Y, y=λ_product, col sep=comma]{\datab};
+%    \addplot[line width=1.5pt, teal] table [x=Y, y=λ_product, col sep=comma]{\data};
+%    \end{axis}
+%    \end{tikzpicture}
     %\caption{Product Prices}
     %\label{fig:product_prices}
-\end{subfigure}
+%\end{subfigure}
 %\caption{Comparison of Emission Prices and Product Prices}
 \end{figure}
 
