--- a/Figures/production_banking_trader.tex
+++ b/Figures/production_banking_trader.tex
@@ -132,6 +132,7 @@
     \addplot[line width=1.5pt, YellowGreen!40] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_bank, col sep=comma]{\datae};
     \addplot[line width=1.5pt,ForestGreen!40] table [name path= E, color=black, x=Y, y=HDRI-EAF_bank, col sep=comma]{\datae};
     \addplot[line width=1.5pt,red!40] table [name path= E, color=black, x=Y, y=fringe_bank, col sep=comma]{\datae};
+    \addplot[line width=1.5pt,Orange!40] table [name path= E, color=black, x=Y, y=trader_bank, col sep=comma]{\datae};
       
           
     \addplot[line width=1.5pt, gray!50] table [name path= E, color=black, x=Y, y=BF-BOF_bank, col sep=comma]{\datad};
@@ -139,6 +140,7 @@
     \addplot[line width=1.5pt, YellowGreen!50] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_bank, col sep=comma]{\datad};
     \addplot[line width=1.5pt,ForestGreen!50] table [name path= E, color=black, x=Y, y=HDRI-EAF_bank, col sep=comma]{\datad};
     \addplot[line width=1.5pt,red!50] table [name path= E, color=black, x=Y, y=fringe_bank, col sep=comma]{\datad};
+    \addplot[line width=1.5pt,Orange!50] table [name path= E, color=black, x=Y, y=trader_bank, col sep=comma]{\datad};
       
           
     \addplot[line width=1.5pt, gray!60] table [name path= E, color=black, x=Y, y=BF-BOF_bank, col sep=comma]{\datac};
@@ -146,18 +148,21 @@
     \addplot[line width=1.5pt, YellowGreen!60] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_bank, col sep=comma]{\datac};
     \addplot[line width=1.5pt,ForestGreen!60] table [name path= E, color=black, x=Y, y=HDRI-EAF_bank, col sep=comma]{\datac};
     \addplot[line width=1.5pt,red!60] table [name path= E, color=black, x=Y, y=fringe_bank, col sep=comma]{\datac};
+    \addplot[line width=1.5pt,Orange!60] table [name path= E, color=black, x=Y, y=trader_bank, col sep=comma]{\datac};
     
     \addplot[line width=1.5pt, gray!80] table [name path= E, color=black, x=Y, y=BF-BOF_bank, col sep=comma]{\datab};
     \addplot[line width=1.5pt, blue!80] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_bank, col sep=comma]{\datab};
     \addplot[line width=1.5pt, YellowGreen!80] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_bank, col sep=comma]{\datab};
     \addplot[line width=1.5pt,ForestGreen!80] table [name path= E, color=black, x=Y, y=HDRI-EAF_bank, col sep=comma]{\datab};
     \addplot[line width=1.5pt,red!80] table [name path= E, color=black, x=Y, y=fringe_bank, col sep=comma]{\datab};
+    \addplot[line width=1.5pt,Orange!80] table [name path= E, color=black, x=Y, y=trader_bank, col sep=comma]{\datab};
     
     \addplot[line width=1.5pt, gray] table [name path= E, color=black, x=Y, y=BF-BOF_bank, col sep=comma]{\data};
     \addplot[line width=1.5pt, blue] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_bank, col sep=comma]{\data};
     \addplot[line width=1.5pt, YellowGreen] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_bank, col sep=comma]{\data};
     \addplot[line width=1.5pt,ForestGreen] table [name path= E, color=black, x=Y, y=HDRI-EAF_bank, col sep=comma]{\data};
     \addplot[line width=1.5pt,red] table [name path= E, color=black, x=Y, y=fringe_bank, col sep=comma]{\dataa};
+    \addplot[line width=1.5pt,Orange] table [name path= E, color=black, x=Y, y=trader_bank, col sep=comma]{\dataa};
     
     \end{axis}
     \end{tikzpicture}
@@ -186,24 +191,25 @@
               /pgf/number format/1000 sep={},
               xmin = \from, xmax = \till,
               ymin = -2000, ymax = 2000];
-%            \addplot[line width=1.5pt, gray] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\data};
-%            \addlegendentry{BF}
-%            \addplot[line width=1.5pt, blue] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_b, col sep=comma]{\data};
-%            \addlegendentry{Blend NG in BF}
-%            \addplot[line width=1.5pt, YellowGreen] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\data};
-%            \addlegendentry{Blend $H_2$ in BF}
-%            \addplot[line width=1.5pt, ForestGreen] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\data};
-%            \addlegendentry{$H_2$-DRI}
-%            \addplot[line width=2pt,red] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\data};
-%            \addlegendentry{Comp. fringe}
-%            \addplot[line width=2pt,Orange] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\data};
-%            \addlegendentry{Intermidiary}
+            \addplot[line width=1.5pt, gray] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\data};
+            \addlegendentry{BF}
+            \addplot[line width=1.5pt, blue] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_b, col sep=comma]{\data};
+            \addlegendentry{Blend NG in BF}
+            \addplot[line width=1.5pt, YellowGreen] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\data};
+            \addlegendentry{Blend $H_2$ in BF}
+            \addplot[line width=1.5pt, ForestGreen] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\data};
+            \addlegendentry{$H_2$-DRI}
+            \addplot[line width=2pt,red] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\data};
+            \addlegendentry{Comp. fringe}
+            \addplot[line width=2pt,Orange] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\data};
+            \addlegendentry{Intermidiary}
             
     \addplot[line width=1.5pt, gray!40] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\datae};
     \addplot[line width=1.5pt, blue!40] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_b, col sep=comma]{\datae};
     \addplot[line width=1.5pt, YellowGreen!40] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\datae};
     \addplot[line width=1.5pt,ForestGreen!40] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\datae};
     \addplot[line width=1.5pt,red!40] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\datae};
+    \addplot[line width=1.5pt,Orange!40] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\datae};
       
           
     \addplot[line width=1.5pt, gray!50] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\datad};
@@ -211,6 +217,7 @@
     \addplot[line width=1.5pt, YellowGreen!50] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\datad};
     \addplot[line width=1.5pt,ForestGreen!50] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\datad};
     \addplot[line width=1.5pt,red!50] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\datad};
+    \addplot[line width=1.5pt,Orange!50] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\datad};
       
           
     \addplot[line width=1.5pt, gray!60] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\datac};
@@ -218,18 +225,21 @@
     \addplot[line width=1.5pt, YellowGreen!60] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\datac};
     \addplot[line width=1.5pt,ForestGreen!60] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\datac};
     \addplot[line width=1.5pt,red!60] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\datac};
+     \addplot[line width=1.5pt,Orange!60] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\datac};
    
     \addplot[line width=1.5pt, gray!80] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\datab};
     \addplot[line width=1.5pt, blue!80] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_b, col sep=comma]{\datab};
     \addplot[line width=1.5pt, YellowGreen!80] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\datab};
     \addplot[line width=1.5pt,ForestGreen!80] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\datab};
     \addplot[line width=1.5pt,red!80] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\datab};
+    \addplot[line width=1.5pt,Orange!80] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\datab};
     
     \addplot[line width=1.5pt, gray] table [name path= E, color=black, x=Y, y=BF-BOF_b, col sep=comma]{\data};
     \addplot[line width=1.5pt, blue] table [name path= E, color=black, x=Y, y=BF-BlendNG-BOF_b, col sep=comma]{\data};
     \addplot[line width=1.5pt, YellowGreen] table [name path= E, color=black, x=Y, y=BF-BlendH2-BOF_b, col sep=comma]{\data};
     \addplot[line width=1.5pt,ForestGreen] table [name path= E, color=black, x=Y, y=HDRI-EAF_b, col sep=comma]{\data};
     \addplot[line width=1.5pt,red] table [name path= E, color=black, x=Y, y=fringe_b, col sep=comma]{\dataa};
+    \addplot[line width=1.5pt,Orange] table [name path= E, color=black, x=Y, y=trader_b, col sep=comma]{\dataa};
 
         \end{axis}
         \end{tikzpicture}
