--- a/Figures/banking_v2.tex
+++ b/Figures/banking_v2.tex
@@ -17,8 +17,8 @@
 \usetikzlibrary{decorations.text}
 
 % Paths and variables
-\def \data {../results/stochastic_myopic_3.csv}
-\def \refr {../results/stochastic_myopic_1.csv}
+\def \data {../results/rolling_horizon_stochastic_2.csv}
+\def \refr {../results/perfect_foresight_stochastic_1.csv}
 \def \from {2024}
 \def \till {2054}
 
@@ -62,22 +62,22 @@
     \addplot[blue!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % BF-BlendH2-BOF
-    %\addplot[name path=mean, line width=1.5pt, YellowGreen] 
-     %   table [x=Y, y=BF-BlendH2-BOF_b_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-      %  table [x=Y, y=BF-BlendH2-BOF_b_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-    %    table [x=Y, y=BF-BlendH2-BOF_b_Q3, col sep=comma]{\data};
-    %\addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, YellowGreen] 
+        table [x=Y, y=BF-BlendH2-BOF_b_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+       table [x=Y, y=BF-BlendH2-BOF_b_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+        table [x=Y, y=BF-BlendH2-BOF_b_Q3, col sep=comma]{\data};
+    \addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % HDRI-EAF
-   % \addplot[name path=mean, line width=1.5pt, ForestGreen] 
-     %   table [x=Y, y=HDRI-EAF_b_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-       % table [x=Y, y=HDRI-EAF_b_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-       % table [x=Y, y=HDRI-EAF_b_Q3, col sep=comma]{\data};
-    %\addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, ForestGreen] 
+        table [x=Y, y=HDRI-EAF_b_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+        table [x=Y, y=HDRI-EAF_b_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+        table [x=Y, y=HDRI-EAF_b_Q3, col sep=comma]{\data};
+    \addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % Fringe
     \addplot[name path=mean, line width=1.5pt, red] 
@@ -127,22 +127,22 @@
     \addplot[blue!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % BF-BlendH2-BOF
-    %\addplot[name path=mean, line width=1.5pt, YellowGreen] 
-     %   table [x=Y, y=BF-BlendH2-BOF_bank_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-      %  table [x=Y, y=BF-BlendH2-BOF_bank_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-    %    table [x=Y, y=BF-BlendH2-BOF_bank_Q3, col sep=comma]{\data};
-    %\addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, YellowGreen] 
+        table [x=Y, y=BF-BlendH2-BOF_bank_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+        table [x=Y, y=BF-BlendH2-BOF_bank_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+       table [x=Y, y=BF-BlendH2-BOF_bank_Q3, col sep=comma]{\data};
+    \addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % HDRI-EAF
-   % \addplot[name path=mean, line width=1.5pt, ForestGreen] 
-     %   table [x=Y, y=HDRI-EAF_bank_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-       % table [x=Y, y=HDRI-EAF_bank_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-       % table [x=Y, y=HDRI-EAF_bank_Q3, col sep=comma]{\data};
-    %\addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, ForestGreen] 
+        table [x=Y, y=HDRI-EAF_bank_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+        table [x=Y, y=HDRI-EAF_bank_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+        table [x=Y, y=HDRI-EAF_bank_Q3, col sep=comma]{\data};
+    \addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % Fringe
     \addplot[name path=mean, line width=1.5pt, red] 
@@ -197,22 +197,22 @@
     \addplot[blue!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % BF-BlendH2-BOF
-    %\addplot[name path=mean, line width=1.5pt, YellowGreen] 
-     %   table [x=Y, y=BF-BlendH2-BOF_bank_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-      %  table [x=Y, y=BF-BlendH2-BOF_bank_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-    %    table [x=Y, y=BF-BlendH2-BOF_bank_Q3, col sep=comma]{\data};
-    %\addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, YellowGreen] 
+        table [x=Y, y=BF-BlendH2-BOF_bank_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+        table [x=Y, y=BF-BlendH2-BOF_bank_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+        table [x=Y, y=BF-BlendH2-BOF_bank_Q3, col sep=comma]{\data};
+    \addplot[YellowGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % HDRI-EAF
-   % \addplot[name path=mean, line width=1.5pt, ForestGreen] 
-     %   table [x=Y, y=HDRI-EAF_b_mean, col sep=comma]{\data};
-    %\addplot[name path=lower, draw=none] 
-       % table [x=Y, y=HDRI-EAF_bank_Q1, col sep=comma]{\data};
-    %\addplot[name path=upper, draw=none] 
-       % table [x=Y, y=HDRI-EAF_b_Q3, col sep=comma]{\data};
-    %\addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
+    \addplot[name path=mean, line width=1.5pt, ForestGreen] 
+        table [x=Y, y=HDRI-EAF_b_mean, col sep=comma]{\data};
+    \addplot[name path=lower, draw=none] 
+        table [x=Y, y=HDRI-EAF_bank_Q1, col sep=comma]{\data};
+    \addplot[name path=upper, draw=none] 
+        table [x=Y, y=HDRI-EAF_b_Q3, col sep=comma]{\data};
+    \addplot[ForestGreen!40, fill opacity=0.6] fill between[of=lower and upper];
     
     % Fringe
     \addplot[name path=lower, draw=none] 
