--- a/Figures/production_banking.tex
+++ b/Figures/production_banking.tex
@@ -25,9 +25,10 @@
 
 \usetikzlibrary{decorations.text}
 
-%\def \scenario {perfect_foresight}
+\def \scenario {perfect_foresight}
+\def \scenario {liquidity_constraint}
 %\def \scenario {myopicfringe}
-\def \scenario {rolling_horizon}
+%\def \scenario {rolling_horizon}
 
 
 
