--- a/Figures/prices_v3.tex
+++ b/Figures/prices_v3.tex
@@ -21,8 +21,9 @@
 \usetikzlibrary{decorations.text}
 
 % Single data source
-\def \data {../results/stochastic_myopic_3.csv}
-\def \refr {../results/stochastic_myopic_1.csv}
+\def \data {../results/liquidity_constraint_stochastic_1.csv}
+%\def \data {../results/rolling_horizon_stochastic_4.csv}
+\def \refr {../results/perfect_foresight_stochastic_1.csv}
 
 \def \from {2024}
 \def \till {2054}
