--- a/Figures/summary_figure_v2.tex
+++ b/Figures/summary_figure_v2.tex
@@ -6,50 +6,94 @@
 
 \begin{document}
 \def \data {../results/ets_prices_summary_liquidity_constraint.csv}
+
 \begin{tikzpicture}
     \begin{axis}[
         ybar=0pt,
-        bar width=10pt,
-        width=14cm,
-        height=8cm,
-        enlargelimits=0.15,
-        legend style={at={(0.5, 1.05)}, anchor=south, legend columns=2}, % Legend centered at the top
+        bar width=15pt,
+        width=16cm,
+        height=10cm,
+        %enlargelimits=0.15,
+        legend style={at={(0.25, 1.05)}, anchor=south, legend columns=3}, % Legend centered at the top
         xtick=data,
-        %xticklabels={
-        %    Ref., 20, 15, 10, 8, 7, 6, 5, 4, 3 % Hard-coded horizon_ets values
-        %},
-         xticklabels={
-            Ref., 1.2, 1.1, 1.0, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4 % Hard-coded horizon_ets values
+        xticklabels={
+            $\infty$ , 1.2, 1.1, 1.0, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4 % Liquidity constraint factor
         },
-         xlabel={Liquidity constraint factor },
-        ylabel={ETS Price (EUR/t)},
+        xlabel={Liquidity Constraint Factor},
+        ylabel={ETS Price (EUR/t)},        % Primary y-axis label
         ymin=0,
-        nodes near coords,
-        every node near coord/.append style={font=\small,/pgf/number format/precision=1},
+        xmin=0,
+        xmax=11,
+        %nodes near coords,
+        %every node near coord/.append style={font=\small,/pgf/number format/precision=1},
         legend cell align={left},
+        axis y line*=left,                % Align primary y-axis on the left
+        tick align=outside,
+        tick pos=left,
     ]
 
-        % Add bars for 2025 (red)
+        % Bars for ETS Price (2025)
         \addplot[blue,fill=blue!40,line width=1pt] table[
             col sep=comma,
-            x = index, % Use the 'index' column for the x-axis
-            y=λ_ets_mean,               % Use the '2025' column for y-values
-            xticklabels = horizon_ets,
+            x=index,                      % Use 'index' for the x-axis
+            y=λ_ets_mean,                 % ETS price mean for 2025
             restrict x to domain=1:10,
-             error bars/.cd,
-            y dir=plus,y explicit,
         ] {\data};
-        \addlegendentry{2025}
+        \addlegendentry{ETS Price (2025)}
         
-        % Add bars for 2035 (green, last 10 points)
+        % Bars for ETS Price (2035)
         \addplot[gray,fill=gray!40,line width=1pt] table[
             col sep=comma,
-           x expr=\thisrow{index} - 10, % Shift indices from 11..20 to 1..10
-            y=λ_ets_mean,                 % Use the '2035' column for the y-axis
-            restrict x to domain=1:10
+            x expr=\thisrow{index} - 10, % Shift indices for 2035
+            y=λ_ets_mean,                 % ETS price mean for 2035
+            restrict x to domain=1:10,
         ] {\data};
-        \addlegendentry{2035}
+        \addlegendentry{ETS Price (2035)}
+    \end{axis}
 
+    % Secondary axis for fringe MAC costs
+    \begin{axis}[
+        axis y line*=right,                % Align secondary y-axis on the right
+        ylabel={Fringe MAC (EUR/unit)},   % Secondary y-axis label
+        ymin=-3,
+        ymax=3,       
+        xmin=0,
+        xmax=11,  
+       width=16cm,
+        xtick=data,
+        height=10cm,                 % Adjust as necessary for your data range
+        tick align=outside,
+        tick pos=right,
+        axis x line=none,                 % Share the x-axis with the primary axis
+        legend style={at={(0.75, 1.05)}, anchor=south, legend columns=3}, % Reuse legend
+        nodes near coords,
+every node near coord/.append style={font=\small, /pgf/number format/precision=2, /pgf/number format/fixed}
+    ]
+
+        % Line for Fringe MAC (2035)
+        \addplot[black,mark=square*,line width=1pt] table[
+            col sep=comma,
+            x =index, % Shift indices for 2035
+            y=percentage_change_mac,         % Fringe MAC mean for 2035
+            restrict x to domain=2:10,
+        ] {\data};
+        \addlegendentry{Total abatement cost (\%)}
+        
+        % Plot marker at x=1 (index 1)
+        \addplot[
+            only marks,
+            mark=square*, 
+            black, 
+            line width=1pt
+        ] table[
+            col sep=comma,
+            x =index,
+            y=percentage_change_mac,
+            restrict x to domain=1:1
+        ] {\data};
+        
+        % Add vertical dotted line at x=4
+        \addplot[dashed, black, thick] coordinates {(0,0) (11,0)};
     \end{axis}
 \end{tikzpicture}
 
