--- a/Figures/banking_v3.tex
+++ b/Figures/banking_v3.tex
@@ -17,10 +17,10 @@
 \usetikzlibrary{decorations.text}
 
 % Paths and variables
-\def \data {../results/liquidity_constraint_stochastic_11.csv}
+\def \data {../results/scenario_29.csv}
 %\def \data {../results/combined_stochastic_4.csv}
 %\def \data {../results/rolling_horizon_stochastic_11.csv}
-\def \refr {../results/perfect_foresight_stochastic_1.csv}
+\def \refr {../results/scenario_25.csv}
 \def \from {2024}
 \def \till {2054}
 
