--- a/Figures/summary_figure_v2.tex
+++ b/Figures/summary_figure_v2.tex
@@ -7,7 +7,9 @@
 
 
 \begin{document}
+%\def \data {../results/ets_prices_summary_discounting.csv}
 \def \data {../results/ets_prices_summary_liquidity_constraint.csv}
+%\def \data {../results/ets_prices_summary_rolling_horizon.csv}
 
 \begin{tikzpicture}
     \begin{axis}[
