--- a/Figures/steel_summary.tex
+++ b/Figures/steel_summary.tex
@@ -30,6 +30,12 @@
 \def \datadi {../results/scenario_low_NG_50.csv}
 \def \dataei {../results/scenario_low_NG_52.csv}
 
+\def \dataaii {../results/scenario_hign_CD_44.csv}
+\def \databii {../results/scenario_hign_CD_46.csv}
+\def \datacii {../results/scenario_hign_CD_48.csv}
+\def \datadii {../results/scenario_hign_CD_50.csv}
+\def \dataeii {../results/scenario_hign_CD_52.csv}
+
 \def \refr {../results/scenario_32.csv}
 \def \from {2024}
 \def \till {2050}
@@ -45,8 +51,9 @@
             \begin{axis}[
                   height=2.5cm,
                   width=6cm,
+                  title={Reference scenario [\si{$Mt_{steel}$}] },
                   ylabel={$\tau=\infty$},
-                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  legend style={at={(1.5, 2)}, anchor=south, legend columns=3},
                   grid=both,
                   ymin=0, ymax=110,
                   xmin=\from, xmax=\till,
@@ -56,16 +63,18 @@
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataa};
                 \addlegendentry{Blast Furnace}
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataa};
-                \addlegendentry{BF with NG blending}
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataa};
+                \addlegendentry{Blast Furnace with natural gas blending}
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataa};
-                \addlegendentry{BF with CC}
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataa};
-                \addlegendentry{NG DRI with CC}
-                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataa};
-		\addlegendentry{NGDRI}
+                \addlegendentry{Blast Furnace with CCS}
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataa};
+                \addlegendentry{Natural gas DRI with CCS}
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataa};
+		\addlegendentry{Natural gas DRI}
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataa};
-                \addlegendentry{HDRI}
+                \addlegendentry{Hydrogen DRI}
+                
+                % Normal case:
 
             \end{axis}
        
@@ -76,7 +85,7 @@
                   height=2.5cm,
                   width=6cm,
                   %xlabel=Year,
-                  ylabel={$\tau=8$},
+                  ylabel={$\tau=10$},
                   legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
                   grid=both,
                   ymin=0, ymax=110,
@@ -86,11 +95,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datab};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datab};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datab};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datab};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datab};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datab};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datab};
-                 \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datab};
+                 \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datab};
 
             \end{axis}
             \end{tikzpicture}
@@ -109,11 +118,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datac};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datac};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datac};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datac};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datac};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datac};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datac};
-                                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datac};
+                                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datac};
 
             \end{axis}
             \end{tikzpicture}
@@ -132,11 +141,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datad};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datad};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datad};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datad};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datad};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datad};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datad};
-                                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datad};
+                                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datad};
 
             \end{axis}
             \end{tikzpicture}
@@ -156,15 +165,15 @@
                   bar width=4pt
                 ]              
                  \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datae};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datae};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datae};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datae};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datae};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datae};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datae};
-                                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datae};
+                                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datae};
             
                 \end{axis}
             \end{tikzpicture}
-            \caption{Steel production (Mt)}
+            \caption{ }
         \end{subfigure}
     % Panel 2: Capacity Investments
         \begin{subfigure}{6.3cm}
@@ -173,6 +182,7 @@
             \begin{axis}[
                   height=2.5cm,
                   width=6cm,
+                  title={Low natural gas prices [\si{$Mt_{steel}$}]},
                   ylabel={$\tau=\infty$},
                   legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
                   grid=both,
@@ -183,11 +193,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataai};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataai};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataai};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataai};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataai};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataai};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataai};
-                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataai};
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataai};
 
                 NGDRI-EAF
             \end{axis}
@@ -198,7 +208,7 @@
                   height=2.5cm,
                   width=6cm,
                   %xlabel=Year,
-                  ylabel={$\tau=8$},
+                  ylabel={$\tau=10$},
                   legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
                   grid=both,
                   ymin=0, ymax=110,
@@ -208,9 +218,9 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\databi};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\databi};
-               \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\databi};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\databi};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\databi};
+               \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\databi};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\databi};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\databi};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\databi};
             \end{axis}
@@ -230,11 +240,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataci};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataci};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataci};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataci};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataci};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataci};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataci};
-                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataci};
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataci};
             \end{axis}
             \end{tikzpicture}
             % Bar 4
@@ -252,11 +262,11 @@
                   bar width=4pt
                 ]
                \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datadi};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datadi};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datadi};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datadi};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datadi};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datadi};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datadi};
-               \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datadi};
+               \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datadi};
 
             \end{axis}
             \end{tikzpicture}
@@ -276,18 +286,134 @@
                   bar width=4pt
                 ]              
                  \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataei};
-                \addplot[line width=1.2pt, draw=blue,fill=blue!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataei};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataei};
                 \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataei};
-                \addplot[line width=1.2pt, draw=orange,fill=orange!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataei};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataei};
                 \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataei};    
-                \addplot[line width=1.2pt, draw=Red,fill=Red!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataei};        
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataei};        
                 \end{axis}
             \end{tikzpicture}
-            \caption{Steel production (Mt), low NG scenario}
+            \caption{ }
         \end{subfigure}
     % Panel 3: Steel Price
         \begin{subfigure}{6.3cm}
-                 \caption{Steel price}
+        % Bar 1 
+            \begin{tikzpicture}
+            \begin{axis}[
+                  height=2.5cm,
+                  width=6cm,
+                  ylabel={$\tau=\infty$},
+                  title={High \si{$CO_2$} disposal cost [\si{$Mt_{steel}$}]},
+                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  grid=both,
+                  ymin=0, ymax=110,
+                  xmin=\from, xmax=\till,
+                  /pgf/number format/1000 sep={},
+                  ybar stacked,
+                  bar width=4pt
+                ]
+               \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataaii};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataaii};
+                \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataaii};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataaii};
+                \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataaii};
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataaii};
+
+                NGDRI-EAF
+            \end{axis}
+            \end{tikzpicture}
+            % Bar 2
+              \begin{tikzpicture}
+            \begin{axis}[
+                  height=2.5cm,
+                  width=6cm,
+                  %xlabel=Year,
+                  ylabel={$\tau=10$},
+                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  grid=both,
+                  ymin=0, ymax=110,
+                  xmin=\from, xmax=\till,
+                  /pgf/number format/1000 sep={},
+                  ybar stacked,
+                  bar width=4pt
+                ]
+               \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\databii};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\databii};
+               \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\databii};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\databii};
+                \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\databii};
+                \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\databii};
+            \end{axis}
+            \end{tikzpicture}
+            % Bar 3
+             \begin{tikzpicture}
+            \begin{axis}[
+                  height=2.5cm,
+                  width=6cm,
+                  ylabel={$\tau=7$},
+                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  grid=both,
+                  ymin=0, ymax=110,
+                  xmin=\from, xmax=\till,
+                  /pgf/number format/1000 sep={},
+                  ybar stacked,
+                  bar width=4pt
+                ]
+               \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datacii};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datacii};
+                \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datacii};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datacii};
+                \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datacii};
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datacii};
+            \end{axis}
+            \end{tikzpicture}
+            % Bar 4
+             \begin{tikzpicture}
+            \begin{axis}[
+                  height=2.5cm,
+                  width=6cm,
+                  ylabel={$\tau=5$},
+                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  grid=both,
+                  ymin=0, ymax=110,
+                  xmin=\from, xmax=\till,
+                  /pgf/number format/1000 sep={},
+                  ybar stacked,
+                  bar width=4pt
+                ]
+               \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\datadii};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\datadii};
+                \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\datadii};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\datadii};
+                \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\datadii};
+               \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\datadii};
+
+            \end{axis}
+            \end{tikzpicture}
+                        % Bar 5
+             \begin{tikzpicture}
+            \begin{axis}[
+                  height=2.5cm,
+                  width=6cm,
+                  xlabel=Year,
+                  ylabel={$\tau=3$},
+                  legend style={at={(1, 1.1)}, anchor=south, legend columns=3},
+                  grid=both,
+                  ymin=0, ymax=110,
+                  xmin=\from, xmax=\till,
+                  /pgf/number format/1000 sep={},
+                  ybar stacked,
+                  bar width=4pt
+                ]              
+                 \addplot[line width=1.2pt, draw=gray,fill=gray!30] table [x=Y, y=BF-BOF_g_mean, col sep=comma]{\dataeii};
+                \addplot[line width=1.2pt, draw=RawSienna,fill=RawSienna!30] table [x=Y, y=BF-BlendNG-BOF_g_mean, col sep=comma]{\dataeii};
+                \addplot[line width=1.2pt, draw=cyan,fill=cyan!30] table [x=Y, y=BF-BOF-CC_g_mean, col sep=comma]{\dataeii};
+                \addplot[line width=1.2pt, draw=CarnationPink,fill=CarnationPink!30] table [x=Y, y=NG-DRI-CC_g_mean, col sep=comma]{\dataeii};
+                \addplot[line width=1.2pt, draw=ForestGreen,fill=ForestGreen!30] table [x=Y, y=HDRI-EAF_g_mean, col sep=comma]{\dataeii};    
+                \addplot[line width=1.2pt, draw=Fuchsia,fill=Fuchsia!30] table [x=Y, y=NGDRI-EAF_g_mean, col sep=comma]{\dataeii};        
+                \end{axis}
+            \end{tikzpicture}
+                 \caption{ }
         \end{subfigure}
 \end{figure}
 
